<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/CampoNome"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="650dp"
        android:hint="@string/nome"
        />

    <EditText
        android:id="@+id/CampoTelefone"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="582dp"
        android:hint="@string/telefone"/>

    <EditText
        android:id="@+id/CampoEmail"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="511dp"
        android:hint="@string/email" />

    <Spinner
        android:id="@+id/Spinner"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="457dp" />

    <TextView
        android:id="@+id/Preferencias"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="404dp"
        android:text="@string/preferencias"/>

    <CheckBox
        android:id="@+id/ContatoTelefone"
        android:layout_width="115dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="327dp"
        android:text="@string/contatoTelefone" />

    <CheckBox
        android:id="@+id/ContatoEmail"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="331dp"
        android:text="@string/contatoEmail" />

    <Button
        android:id="@+id/botao"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="246dp"
        android:text="@string/cadastrar"/>

</RelativeLayout>